# NotesTree

./: CMakeLists.txt  Makefile  NotesTree  NotesTree.desktop  NotesTree.pro  OverNote.pro  OverNote.qbs  README.md  TreeNote.pro  make-appimage  make-deb  pretest.py
debian/: changelog  control  copyright
res/: Big.qml  ErrorDialog.qml  Note.qml  NotesList.qml  Small.qml  css  loading-note.html  main.qml  qml.qrc
src/: AddNewNoteDialog.c++  AddNewNoteDialog.h  AddNewNoteDialog.ui  App.c++  App.h  ByteArraySerializer.h  Config.c++  Config.h  Directory.cpp  Downloader.c++  Downloader.h  Exceptions.c++  Exceptions.h  FileSystem.c++  FileSystem.h  FilenameEncoder.cpp  FilenameEncoder.h  MainWindow.c++  MainWindow.h  MainWindow.ui  Note.c++  Note.cpp  Note.h  NoteEditor.c++  NoteEditor.h  NoteEditor.ui  NoteEditorSearchHighlighter.c++  NoteEditorSearchHighlighter.h  NotesTree.c++  NotesTree.h  NotesTree.ui  NotesTreeActions.c++  NotesTreeActions.h  NotesTreeModel.c++  NotesTreeModel.cpp  NotesTreeModel.h  QMLApp.cpp  QMLApp.h  main.c++  main.cpp  (+1 more)
